plugins {
    id 'java'
    id 'application'
    id 'io.freefair.lombok' version '8.0.1'
}

group = 'lucasm'
version = '0.1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.glassfish.jersey.core:jersey-server:3.1.0'
    implementation 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:3.1.0'
    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.0'
    implementation 'org.glassfish.jersey.media:jersey-media-jaxb:3.1.0'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'
    implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:3.0.0'
    implementation 'org.jboss.weld.se:weld-se-core:4.0.2.Final'
    implementation 'jakarta.xml.ws:jakarta.xml.ws-api:2.3.3'
    implementation 'com.sun.xml.ws:jaxws-rt:3.0.0'
    implementation 'com.sun.xml.ws:jaxws-tools:2.3.3'
    implementation 'jakarta.jws:jakarta.jws-api:3.0.0'
    implementation 'jakarta.xml.ws:jakarta.xml.ws-api:4.0.2'
    implementation 'jakarta.annotation:jakarta.annotation-api:2.0.0'
    implementation 'jakarta.activation:jakarta.activation-api:2.0.0'
    implementation 'com.sun.xml.bind:jaxb-core:3.0.1'
    implementation 'com.sun.xml.bind:jaxb-impl:3.0.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

application {
    mainClass.set('lucasm.rest_soap.RestSoapApplication')
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-parameters']
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaExec) {
    jvmArgs += '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED'
}

tasks.withType(Tar) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(Zip) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}